# llbuild.ml

./: .gitignore  .gitmodules  README.md  dune  dune-project  esy.json  libllbuild.opam  llbuild.opam
.github/workflows/: esy.yml  opam.yml  release.yml
c/: dune
esy-overrides/conf-cmake/: build.sh  package.json
esy-overrides/conf-libffi/: package.json
esy-overrides/conf-pkg-config/: build.sh  package.json
esy-overrides/libffi/: build.sh  package.json
esy-overrides/texinfo/: package.json
ffi/: dune  function_description.ml  type_description.ml
lib/: dune  llbuild.ml  llbuild.mli
stubgen/: dune  generate.ml
test/: dune  test_llbuild.ml
