opam-version: "2.0"
version: "0.1.0"
synopsis: "OCaml bindings for llbuild"
maintainer: "oscar@grain-lang.org"
author: "Oscar Spencer"
license: "Apache-2.0"
homepage: "https://github.com/grain-lang/llbuild.ml"
dev-repo: "git+https://github.com/grain-lang/llbuild.ml.git"
bug-reports: "https://github.com/grain-lang/llbuild.ml/issues"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.14.0"}
  "dune" {>= "3.0.0"}
  "ctypes" {>= "0.21.0"}
  "ctypes-foreign" {>= "0.21.0"}
  "libllbuild" {= version}
]
depexts: [
  ["libffi-dev"] {os-family = "debian"}
  ["libffi-devel"] {os-family = "fedora"}
]
x-maintenance-intent: ["(latest)"]
